# journalingApp

./: CMakeLists.txt  README  README.md
libs/module1/: CMakeLists.txt
libs/module1/include/: entry.h  entryvec.h  globalVars.h  globalVars.h.in  procedures.h  timedata.h
libs/module1/src/: entry.cpp  entryvec.cpp  main.cpp  procedures.cpp  timedata.cpp
libs/module1/test/: CMakeLists.txt  t_createEntryObj.cpp  t_createEntryVecObj.cpp  t_createTimeDataObj.cpp  t_loadLibs.cpp
